--- a/StarWarSide/Base.lproj/Main.storyboard
+++ b/StarWarSide/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,151 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StarWarSide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swlogo" translatesAutoresizingMaskIntoConstraints="NO" id="QWk-ri-ggc">
+                                <rect key="frame" x="14" y="176" width="386" height="340"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="340" id="ufY-Q9-VUQ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u5m-eK-ITE">
+                                <rect key="frame" x="47" y="776" width="320" height="86"/>
+                                <color key="backgroundColor" red="1" green="0.99998790029999995" blue="0.99999219179999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="0bv-wc-NJ6"/>
+                                    <constraint firstAttribute="height" constant="86" id="ar7-N9-wTU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Select side">
+                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="tipSelecSide:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j89-Pl-OPZ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8s-BN-KeI">
+                                <rect key="frame" x="47" y="524" width="320" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="KhI-Fa-fN3"/>
+                                    <constraint firstAttribute="height" constant="72" id="vqu-qP-c3S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.99998790029999995" blue="0.99999219179999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W8s-BN-KeI" secondAttribute="trailing" constant="47" id="UAH-EA-fU0"/>
+                            <constraint firstItem="u5m-eK-ITE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h1s-2y-Xeh"/>
+                            <constraint firstItem="QWk-ri-ggc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="14" id="iJD-Pq-FsQ"/>
+                            <constraint firstItem="QWk-ri-ggc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="132" id="luh-Mf-l3p"/>
+                            <constraint firstItem="W8s-BN-KeI" firstAttribute="top" secondItem="QWk-ri-ggc" secondAttribute="bottom" constant="8" id="nlz-LX-9Gz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QWk-ri-ggc" secondAttribute="trailing" constant="14" id="p3q-4P-jMD"/>
+                            <constraint firstItem="W8s-BN-KeI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="47" id="rwZ-zb-Svn"/>
+                            <constraint firstItem="u5m-eK-ITE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="xTh-OL-png"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="chooseButton" destination="u5m-eK-ITE" id="uoL-oV-gmb"/>
+                        <outlet property="mainImageView" destination="QWk-ri-ggc" id="9XX-FF-LpQ"/>
+                        <outlet property="nameLabel" destination="W8s-BN-KeI" id="0s8-zg-AVY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="119.86607142857142"/>
+        </scene>
+        <!--Select SideVC-->
+        <scene sceneID="q7j-yC-KIh">
+            <objects>
+                <viewController storyboardIdentifier="SelectSideVC" modalPresentationStyle="fullScreen" id="0Zj-De-Xcs" customClass="SelectSideVC" customModule="StarWarSide" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5ha-eu-DIS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="nAh-0M-4aM">
+                                <rect key="frame" x="87" y="152" width="240" height="525"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IRS-F4-6aU">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="250"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="empireLogo" translatesAutoresizingMaskIntoConstraints="NO" id="RO0-Qm-ViJ">
+                                                <rect key="frame" x="0.0" y="8" width="240" height="234"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DtM-oY-fXg">
+                                                <rect key="frame" x="20" y="20" width="200" height="210"/>
+                                                <connections>
+                                                    <action selector="didTapEmpire:" destination="0Zj-De-Xcs" eventType="touchUpInside" id="Kur-8X-aoh"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="DtM-oY-fXg" firstAttribute="top" secondItem="IRS-F4-6aU" secondAttribute="top" constant="20" symbolic="YES" id="Gth-Lx-JZb"/>
+                                            <constraint firstItem="DtM-oY-fXg" firstAttribute="leading" secondItem="IRS-F4-6aU" secondAttribute="leading" constant="20" symbolic="YES" id="Par-EY-cJz"/>
+                                            <constraint firstAttribute="bottom" secondItem="DtM-oY-fXg" secondAttribute="bottom" constant="20" symbolic="YES" id="S6y-Zf-LYq"/>
+                                            <constraint firstAttribute="trailing" secondItem="DtM-oY-fXg" secondAttribute="trailing" constant="20" symbolic="YES" id="foG-jx-Nz2"/>
+                                            <constraint firstAttribute="height" constant="250" id="lYt-kt-hAZ"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fO6-Ac-T8z">
+                                        <rect key="frame" x="0.0" y="300" width="240" height="225"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="resistanceLogo" translatesAutoresizingMaskIntoConstraints="NO" id="HxV-xn-wKY">
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="225"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTl-fa-Amm">
+                                                <rect key="frame" x="20" y="20" width="200" height="185"/>
+                                                <connections>
+                                                    <action selector="didTapResistance:" destination="0Zj-De-Xcs" eventType="touchUpInside" id="sTn-QU-3tO"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="TTl-fa-Amm" secondAttribute="bottom" constant="20" symbolic="YES" id="0EY-fb-RPN"/>
+                                            <constraint firstItem="TTl-fa-Amm" firstAttribute="top" secondItem="fO6-Ac-T8z" secondAttribute="top" constant="20" symbolic="YES" id="eb1-5Q-9ZR"/>
+                                            <constraint firstItem="TTl-fa-Amm" firstAttribute="leading" secondItem="fO6-Ac-T8z" secondAttribute="leading" constant="20" symbolic="YES" id="lwX-vB-Xa1"/>
+                                            <constraint firstAttribute="trailing" secondItem="TTl-fa-Amm" secondAttribute="trailing" constant="20" symbolic="YES" id="rJr-rn-NOV"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="zpr-Dm-8jQ"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="nAh-0M-4aM" firstAttribute="centerX" secondItem="5ha-eu-DIS" secondAttribute="centerX" id="MBU-V1-n4q"/>
+                            <constraint firstItem="nAh-0M-4aM" firstAttribute="top" secondItem="IaT-rD-6Mo" secondAttribute="top" constant="108" id="Rcq-kg-gqc"/>
+                            <constraint firstItem="IaT-rD-6Mo" firstAttribute="bottom" secondItem="nAh-0M-4aM" secondAttribute="bottom" constant="185" id="pjg-wo-vh0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IaT-rD-6Mo"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="p14-Jp-MAc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yv6-l6-xER" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="921.73913043478262" y="119.86607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="empireLogo" width="300" height="300"/>
+        <image name="resistanceLogo" width="111" height="113.5"/>
+        <image name="swlogo" width="240" height="180"/>
+    </resources>
 </document>
